# yalc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  Session.vim  ast.gv  grammar.bnf  grammar.ebnf  grammar.old.bnf  grammar.txt  ideas.md  main.odin  notes.md  test.c  test.yal  test.yal.bak  test.yal.crazy  test.yal.old  test2.yal  test_2.yal  test_c.yal  watch.sh
.github/workflows/: cmake-single-platform.yml
app/: CMakeLists.txt  args.c  args.h  main.c
benchmarking/: Makefile  bench.c  bench.cpp  bench.rs  bench.yal  build-yal.sh  c.yal
cmake/: Dupe.cmake
cmd/: CMakeLists.txt  argparser.cpp  argparser.hpp  main.cpp
lib/: CMakeLists.txt
lib/alloc/: allocator.c  allocator.h
lib/da/: da.c  da.h
lib/lst/: lst.h
lib/map/: map.h
lib/slice/: slice.h
lib/utils/: fnv1a.h  fs.c  fs.h  macros.h  minmax.h  strconv.h  string.h
parser/: ast.odin  parse_tree.odin
presentation/: index.html  package.json  pnpm-lock.yaml
presentation/src/: presentation.md  presentation.pug  presentation.ts
src/: CMakeLists.txt  allocator.c  allocator.h  arena.cpp  arena.hpp  ast-node-conv.hpp  ast-node-id.cpp  ast-node-id.hpp  ast-node-visitor.cpp  ast-node-visitor.hpp  ast-node.cpp  ast-node.hpp  ast.c  ast.cpp  ast.h  ast.hpp  codegen_qbe.cpp  codegen_qbe.hpp  common.h  da.c  da.h  decl-id.cpp  decl-id.hpp  decl-store.cpp  decl-store.hpp  decl.cpp  decl.hpp  depg.c  depg.h  error_reporter.cpp  error_reporter.hpp  errors.c  errors.h  file-store.cpp  file-store.hpp  file_store.cpp  file_store.hpp  hlir.cpp  hlir.hpp  ir-build.cpp  (+58 more)
src/arena/: arena.c
src/codegen/: codegen_c.c  codegen_c.h  codegen_mips.c  codegen_mips.h  codegen_qbe.cpp  codegen_qbe.hpp  codegen_wasm.c  codegen_wasm.h
src/compile/: compile_qbe.cpp  compile_qbe.hpp
test_ws/: hello.yal  main.yal
test_ws/libc/: stdio.yal  stdlib.yal
tests/: CMakeLists.txt  ampersand.test.json  argparse.cpp  argparse.hpp  ast.cpp  carrot.test.json  char.test.json  clean-tests.sh  comment.test.json  empty file.test.json  gen-test-coverage.sh  int-dot.test.json  int-methods.test.json  name-resolution-counter-example.test.json  name-resolution-hello-world-libc-with-shbang.test.json  name-resolution-hello-world-libc.test.json  name-resolution-minimal.test.json  name-resolution-multi-file-duplicate-names.test.json  name-resolution-multi-file-function-namespacing-2.test.json  name-resolution-multi-file-function-namespacing.test.json  name-resolution-multi-file-multi-file-2.test.json  name-resolution-multi-file-multi-file-4.test.json  name-resolution-multi-file-multi-file-5.test.json  name-resolution-multi-file-named-returns.test.json  name-resolution-multi-file-parameters.test.json  name-resolution-multi-file-private-names-2.test.json  name-resolution-multi-file-private-names-3.test.json  name-resolution-multi-file-private-names-4.test.json  name-resolution-multi-file-private-names.test.json  name-resolution-redefine-same-name.test.json  name-resolution-self-referential-struct-0.test.json  name-resolution-self-referential-struct.test.json  name-resolution-simple-functions-bare-return.test.json  name-resolution-simple-functions-main-function.test.json  name-resolution-simple-functions-namespaced-2.test.json  name-resolution-simple-functions-namespaced-3.test.json  name-resolution-simple-functions-namespaced.test.json  name-resolution-simple-functions-void-function-1.test.json  name-resolution-simple-functions-void-function-2.test.json  name-resolution-simple-functions-void-function-with-comment.test.json  (+206 more)
tests/.cases/: case-empty-000.json  case-module 2-002.json  case-module-001.json
tests/.outputs/: add-file-twice.file_store.test.json  ampersand.integration.tokenizer.test.json  bang.integration.tokenizer.test.json  carrot.integration.tokenizer.test.json  char.integration.tokenizer.test.json  comment.integration.tokenizer.test.json  decorator.integration.tokenizer.test.json  defs-1.integration.parser.test.json  empty-file.integration.parser.test.json  empty-file.integration.tokenizer.test.json  equals.integration.tokenizer.test.json  expression-1.integration.parser.test.json  expression-10.integration.parser.test.json  expression-11.integration.parser.test.json  expression-12.integration.parser.test.json  expression-13.integration.parser.test.json  expression-14.integration.parser.test.json  expression-15.integration.parser.test.json  expression-16.integration.parser.test.json  expression-2.integration.parser.test.json  expression-3.integration.parser.test.json  expression-4.integration.parser.test.json  expression-5.integration.parser.test.json  expression-6.integration.parser.test.json  expression-7.integration.parser.test.json  expression-8.integration.parser.test.json  expression-9.integration.parser.test.json  function-and-var---invalid-1.integration.parser.test.json  function-and-var---invalid-10.integration.parser.test.json  function-and-var---invalid-11.integration.parser.test.json  function-and-var---invalid-12.integration.parser.test.json  function-and-var---invalid-13.integration.parser.test.json  function-and-var---invalid-14.integration.parser.test.json  function-and-var---invalid-15.integration.parser.test.json  function-and-var---invalid-16.integration.parser.test.json  function-and-var---invalid-17.integration.parser.test.json  function-and-var---invalid-18.integration.parser.test.json  function-and-var---invalid-19.integration.parser.test.json  function-and-var---invalid-2.integration.parser.test.json  function-and-var---invalid-20.integration.parser.test.json  (+582 more)
tests/cases/: call_args.test.yal  call_args_2.test.yal  call_no_args.test.yal  cast.test.yal  cast_2.test.yal  comp.test.yal  empty_funcs.test.yal  hello_world_putchar.yal  local_and_assign.test.yal  local_assign_and_if.test.yal  local_assign_and_if_else.test.yal  logic_and.test.yal  logic_and_2.test.yal  many_types.test.yal  params_add.test.yal  params_if.test.yal  params_if_2.test.yal  str.test.yal  str_2.test.yal  while.test.yal  zeroer.test.yal
tests/test_data/: a.yal  b.yal  c.yal
tokenizer/: tokenizer.odin  tokenizer_test.odin
